# CopperTag

./: CMakeLists.txt  README.md
example/: generator.cpp
src/coppertag_rule/: tagRule.cpp
